--- a/index.html
+++ b/index.html
@@ -33,6 +33,84 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
+        <section class="relative">
+            <div class="carousel h-[200px] mx-3 lg:h-[550px] mt-12 mb-4 lg:mb-24">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="/Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="/Images/4.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-[#131318] mx-3 lg:absolute lg:bottom-36 lg:right-20 rounded-2xl p-8">
+                <h3 class="text-xl font-extrabold text-white">Meet all the heroes from the field</h3>
+                <p class="font-medium text-[#FFFFFF99] mt-4">It’s a grand gathering where attendees have the opportunity
+                    to interact with
+                    their idols, <br> learn from their experiences, and get inspired.</p>
+            </div>
+        </section>
+        <section>
+            <div class="mx-3">
+                <h2 class="text-2xl mt-16 lg:mt-4 lg:text-4xl font-extrabold text-center text-[#131318]">Professional
+                    Hockeys Club</h2>
+                <p class="font-medium text-center text-[#13131899] my-6">
+                    professional hockey clubs form a vibrant global community, where players showcase their skills, fans
+                    cheer passionately, <br> and the love for the game transcends borders.
+                </p>
+            </div>
+            <div class="mx-3 lg:flex gap-8">
+                <div class="text-center my-6">
+                    <div class="radial-progress text-red-500" style="--value:87;" role="progressbar">87%</div>
+                    <h4 class="text-xl mt-6 font-semibold text-[ #131318]">
+                        Player Facility
+                    </h4>
+                    <p class="text-[#13131899] mt-4">
+                        Sport Facility Planning and Management involves the intricate design, development, and oversight
+                        <br> of spaces dedicated to sports and recreational activities
+                    </p>
+                </div>
+                <div class="text-center my-6">
+                    <div class="radial-progress text-green-400" style="--value:95;" role="progressbar">95%</div>
+                    <h4 class="text-xl mt-6 font-semibold text-[ #131318]">
+                        Experienced Coach
+                    </h4>
+                    <p class="text-[#13131899] mt-4">
+                        An experienced coach should have extensive experience in their field and be able to teach others
+                        how to improve. <br>
+                        They do not solve problems for their clients but can guide and motivate clients to solve their
+                        own problems
+                    </p>
+                </div>
+                <div class="text-center my-6">
+                    <div class="radial-progress text-amber-400" style="--value:90;" role="progressbar">90%</div>
+                    <h4 class="text-xl mt-6 font-semibold text-[ #131318]">
+                        Senior Player
+                    </h4>
+                    <p class="text-[#13131899] mt-4">
+                        A Senior Player, whether in sports or professional fields, typically refers to an individual
+                        <br> who has significant experience and leadership roles in their respective field
+                    </p>
+                </div>
+                <div class="text-center my-6">
+                    <div class="radial-progress text-blue-400" style="--value:80;" role="progressbar">80%</div>
+                    <h4 class="text-xl mt-6 font-semibold text-[ #131318]">
+                        Training Ground
+                    </h4>
+                    <p class="text-[#13131899] mt-4">
+                        a training ground is typically a place where individuals or teams go to <br> practice and prepare for professional engagements
+                    </p>
+                </div>
+            </div>
+        </section>
+
 
     </header>
     <main>
