added program section

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'button-bg': '#FF4240',
                     }
                 }
             }
         }
     </script>
+    <!-- custom styles -->
     <style>
         .font-manrope {
             font-family: "Manrope", sans-serif;
@@ -33,6 +35,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
+
+        <!-- banner section -->
         <section class="relative">
             <div class="carousel h-[200px] mx-3 lg:h-[550px] mt-12 mb-4 lg:mb-24">
                 <div id="slide1" class="carousel-item relative w-full">
@@ -57,6 +61,9 @@
                     their idols, <br> learn from their experiences, and get inspired.</p>
             </div>
         </section>
+    </header>
+    <main class="container mx-auto">
+        <!-- professional hockey's club section -->
         <section>
             <div class="mx-3">
                 <h2 class="text-2xl mt-16 lg:mt-4 lg:text-4xl font-extrabold text-center text-[#131318]">Professional
@@ -95,8 +102,8 @@
                         Senior Player
                     </h4>
                     <p class="text-[#13131899] mt-4">
-                        A Senior Player, whether in sports or professional fields, typically refers to an individual
-                        <br> who has significant experience and leadership roles in their respective field
+                        A Senior Player, whether in sports or professional fields, typically refers to an <br>
+                        individual who has significant experience and leadership roles in their respective field
                     </p>
                 </div>
                 <div class="text-center my-6">
@@ -105,16 +112,57 @@
                         Training Ground
                     </h4>
                     <p class="text-[#13131899] mt-4">
-                        a training ground is typically a place where individuals or teams go to <br> practice and prepare for professional engagements
+                        a training ground is typically a place where individuals or teams <br> go to practice and
+                        prepare for professional engagements
                     </p>
                 </div>
             </div>
         </section>
 
-
-    </header>
-    <main>
-
+        <!-- program sections -->
+        <section>
+            <div class="mx-3">
+                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Program
+                    Sections</h2>
+                <p class="font-medium text-center text-[#13131899] my-6">
+                    The program section of a hockey website typically includes information about the various events,
+                    <br> matches, and initiatives related to the sport.
+                </p>
+            </div>
+            <div class="grid grid-cols-1 mt-12 gap-6 lg:mt-20 md:grid-cols-2">
+                <div
+                    class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/2.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl ">
+                    <h3 class="text-xl lg:text-3xl font-extrabold text-white">Junior Program</h3>
+                    <p class="text-sm lg:text-base font-medium text-white my-6"> USA Hockey’s junior program provides opportunities for
+                        players ages 16-to-20 to hone and enhance their skills.</p>
+                    <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
+                </div>
+                <div>
+                    <div
+                        class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/3.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl ">
+                        <h3 class="text-xl lg:text-3xl font-extrabold text-white">Teenager Program</h3>
+                        <p class="text-sm lg:text-base font-medium text-white my-6"> This platform helps you run your hockey program like a
+                            pro. It provides tools to register players & collect payments.</p>
+                        <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
+                    </div>
+                </div>
+                <div>
+                    <div
+                        class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/4.png')] bg-no-repeat p-4 my-4 mx-3 lg:p-10 lg:pt-52 w-full h-[244px] lg:w-[1170px] lg:h-[450px]  col-span-2 rounded-2xl ">
+                        <h3 class="text-xl lg:text-3xl font-extrabold text-white">Professional Program</h3>
+                        <p class="text-sm lg:text-base font-medium text-white my-6"> This website offers a comprehensive guide on joining a pro hockey team. <br> It covers everything from understanding the professional hockey world to navigating the tryout process2</p>
+                        <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class="mx-3">
+                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Our New Products</h2>
+                <p class="font-medium text-center text-[#13131899] my-6">
+                    The Our New Products section on the hockey website features the latest releases from top hockey brands. 
+                </p>
+            </div>
+        </section>
     </main>
     <footer>
 
