--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         }
     </script>
     <!-- custom styles -->
+    <script src="https://kit.fontawesome.com/47c9a07c84.js" crossorigin="anonymous"></script>
     <style>
         .font-manrope {
             font-family: "Manrope", sans-serif;
@@ -129,19 +130,21 @@
                     <br> matches, and initiatives related to the sport.
                 </p>
             </div>
-            <div class="grid grid-cols-1 mt-12 gap-6 lg:mt-20 md:grid-cols-2">
+            <div class="grid grid-cols-1 mt-12 gap-6 lg:mt-20 lg:grid-cols-2 lg:w-[1170px]">
                 <div
                     class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/2.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl ">
                     <h3 class="text-xl lg:text-3xl font-extrabold text-white">Junior Program</h3>
-                    <p class="text-sm lg:text-base font-medium text-white my-6"> USA Hockey’s junior program provides opportunities for
+                    <p class="text-sm lg:text-base font-medium text-white my-6"> USA Hockey’s junior program provides
+                        opportunities for
                         players ages 16-to-20 to hone and enhance their skills.</p>
                     <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
                 </div>
                 <div>
                     <div
-                        class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/3.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl ">
+                        class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/3.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl col-span-3">
                         <h3 class="text-xl lg:text-3xl font-extrabold text-white">Teenager Program</h3>
-                        <p class="text-sm lg:text-base font-medium text-white my-6"> This platform helps you run your hockey program like a
+                        <p class="text-sm lg:text-base font-medium text-white my-6"> This platform helps you run your
+                            hockey program like a
                             pro. It provides tools to register players & collect payments.</p>
                         <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
                     </div>
@@ -150,17 +153,161 @@
                     <div
                         class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/4.png')] bg-no-repeat p-4 my-4 mx-3 lg:p-10 lg:pt-52 w-full h-[244px] lg:w-[1170px] lg:h-[450px]  col-span-2 rounded-2xl ">
                         <h3 class="text-xl lg:text-3xl font-extrabold text-white">Professional Program</h3>
-                        <p class="text-sm lg:text-base font-medium text-white my-6"> This website offers a comprehensive guide on joining a pro hockey team. <br> It covers everything from understanding the professional hockey world to navigating the tryout process2</p>
+                        <p class="text-sm lg:text-base font-medium text-white my-6"> This website offers a comprehensive
+                            guide on joining a pro hockey team. <br> It covers everything from understanding the
+                            professional hockey world to navigating the tryout process2</p>
                         <button class="btn bg-button-bg border-0 text-white text-xl font-bold">Register Now!</button>
                     </div>
                 </div>
         </section>
         <section>
             <div class="mx-3">
-                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Our New Products</h2>
+                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Our New
+                    Products</h2>
                 <p class="font-medium text-center text-[#13131899] my-6">
-                    The Our New Products section on the hockey website features the latest releases from top hockey brands. 
+                    The Our New Products section on the hockey website features the latest releases from top hockey
+                    brands.
                 </p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 ">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/5.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/6.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/7.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/8.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/9.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                    <div>
+                        <img src="Images/10.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-5 my-3 items-center">
+                            <i class="fa-solid fa-star text-amber-400"></i>
+                            <p>5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p>20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <h3 class="text-xl font-extrabold my-3">World Cup Flags Football</h3>
+                        <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
+                            representing their country</p>
+                        <div class="flex gap-5 items-center my-3">
+                            <p class="font-extrabold">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p class="font-medium">Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
