--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <br> matches, and initiatives related to the sport.
                 </p>
             </div>
-            <div class="grid grid-cols-1 mt-12 gap-6 lg:mt-20 lg:grid-cols-2 lg:w-[1170px]">
+            <div class="grid grid-cols-1 mt-12 gap-6 lg:mt-20 lg:grid-cols-2 lg:w-[1170px] mx-auto">
                 <div
                     class=" bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('Images/2.png')] bg-no-repeat p-6 my-4 mx-3 lg:my-0 lg:p-10 lg:pt-32 w-full h-[244px] lg:w-[573px] lg:h-[338px] rounded-2xl ">
                     <h3 class="text-xl lg:text-3xl font-extrabold text-white">Junior Program</h3>
@@ -160,6 +160,8 @@
                     </div>
                 </div>
         </section>
+
+        <!-- our new products section -->
         <section>
             <div class="mx-3">
                 <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Our New
@@ -169,8 +171,8 @@
                     brands.
                 </p>
             </div>
-            <div class="grid grid-cols-1 lg:grid-cols-2 ">
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+            <div class="grid grid-cols-1 lg:grid-cols-2 ml-10 ">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/5.png" alt="">
                     </div>
@@ -187,13 +189,13 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500 ">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/6.png" alt="">
                     </div>
@@ -210,13 +212,13 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/7.png" alt="">
                     </div>
@@ -233,13 +235,13 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/8.png" alt="">
                     </div>
@@ -256,13 +258,13 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/9.png" alt="">
                     </div>
@@ -279,13 +281,13 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5">
+                <div class="flex flex-col lg:flex-row mx-auto lg:mx-4 my-5 gap-5 border-2 rounded-lg p-6">
                     <div>
                         <img src="Images/10.png" alt="">
                     </div>
@@ -302,10 +304,171 @@
                         <p class="font-medium my-3">Each team participating in the World Cup has its own flag, <br>
                             representing their country</p>
                         <div class="flex gap-5 items-center my-3">
-                            <p class="font-extrabold">Price - $22.00</p>
+                            <p class="font-extrabold text-red-500">Price - $22.00</p>
                             <i class="fa-solid fa-cart-shopping"></i>
                             <p class="font-medium">Delivery Fee : Free</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- clients question section -->
+        <section>
+            <div class="mx-3">
+                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Clients
+                    Question</h2>
+                <p class="font-medium text-center text-[#13131899] my-6">
+                    An FAQ page typically includes common questions and answers about the website’s content, services,
+                    or products
+                </p>
+            </div>
+            <div class="flex flex-col lg:flex-row gap-10 mt-20 border-2 rounded-lg p-6">
+                <div>
+                    <img src="Images/11.png" alt="">
+                </div>
+                <div>
+                    <div>
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                Our Equipment
+                            </div>
+                            <div class="collapse-content">
+                                <p>The equipment section of a hockey website typically provides comprehensive
+                                    information about various types of hockey gear.</p>
+                            </div>
+                        </div>
+                        <hr class="border-r-2 mb-1">
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Hockey Training
+                            </div>
+                            <div class="collapse-content">
+                                <p>The training section of a hockey website typically offers a variety of resources and
+                                    programs designed to help players improve their skills and performance on the ice.
+                                </p>
+                            </div>
+                        </div>
+                        <hr class="border-r-2 mb-1">
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Private Lessons
+                            </div>
+                            <div class="collapse-content">
+                                <p>The Private Lessons section of a hockey website typically offers personalized
+                                    coaching services to help players improve their skills and performance.</p>
+                            </div>
+                        </div>
+                        <hr class="border-r-2 mb-1">
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Ski Touring
+                            </div>
+                            <div class="collapse-content">
+                                <p>The Private Lessons section of a hockey website typically offers personalized
+                                    coaching services to help players improve their skills and performance.</p>
+                            </div>
+                        </div>
+                        <hr class="border-r-2 mb-1">
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Booking
+                            </div>
+                            <div class="collapse-content">
+                                <p>The Private Lessons section of a hockey website typically offers personalized
+                                    coaching services to help players improve their skills and performance.</p>
+                            </div>
+                        </div>
+                        <hr class="border-r-2 mb-1">
+                        <div class="collapse collapse-plus mb-1">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Pricings
+                            </div>
+                            <div class="collapse-content">
+                                <p>The Private Lessons section of a hockey website typically offers personalized
+                                    coaching services to help players improve their skills and performance.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+        </section>
+
+        <!-- get in touch section -->
+        <section>
+            <div class="mx-3">
+                <h2 class="text-2xl mt-16 lg:mt-32 lg:text-4xl font-extrabold text-center text-[#131318]">Get In Touch
+                </h2>
+                <p class="font-medium text-center text-[#13131899] my-6">
+                    The contact information should be easy to locate so that visitors can quickly get in touch.
+                </p>
+            </div>
+            <div class="w-auto lg:w-[1170px] mx-auto mt-20">
+                <div class="flex flex-col lg:flex-row gap-6">
+                    <div class="border-2 rounded-lg p-6 w-full lg:w-[474px] mx-3">
+                        <div class="p-8 rounded-2xl bg-[#BCED6D] mb-6">
+                            <img src="Images/Group 1171275317.png" alt="">
+                            <p class="font-normal mt-6">Phone Number : </p>
+                            <h3 class="text-lg font-extrabold mt-2">(+62) 123-321-543</h3>
+                        </div>
+                        <div class="p-8 rounded-2xl bg-[#FDDD5F] mb-6">
+                            <img src="Images/Group 1171275318.png" alt="">
+                            <p class="font-normal mt-6">Email :
+                            </p>
+                            <h3 class="text-lg font-extrabold mt-2">hockeys@support.com </h3>
+                        </div>
+                        <div class="p-8 rounded-2xl bg-[#629CF3] mb-6">
+                            <img src="Images/Group 1171275321.png" alt="">
+                            <p class="font-normal mt-6">Location :
+                            </p>
+                            <h3 class="text-lg font-extrabold mt-2">152/1 Mohakhali Wireless Gate</h3>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 flex-1 ml-3 ">
+                            <div>
+                                <h3 class="text-xl font-bold mb-4">Your Name</h3>
+                                <input class="p-5 rounded-xl bg-gray-300 w-full" type="text"
+                                    placeholder="Enter your full name">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-4">Your Email</h3>
+                                <input class="p-5 rounded-xl bg-gray-300 w-full" type="text"
+                                    placeholder="Enter your email">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-4">Subject</h3>
+                                <input class="p-5 rounded-xl bg-gray-300 w-full" type="text"
+                                    placeholder="Enter your subject">
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-4">Phone Number</h3>
+                                <input class="p-5 rounded-xl bg-gray-300 w-full" type="text"
+                                    placeholder="Enter your phone number">
+                            </div>
+                        </div>
+                        <div class="mt-6 gap-6 ml-3 w-full">
+                            <h3 class="text-xl font-bold mb-4">Message</h3>
+                            <textarea class=" p-5 rounded-xl bg-gray-300 w-full h-[320px]" name="" id=""
+                                placeholder="Write your message"></textarea>
+                        </div>
+                        <button class="bg-red-500 text-white p-2 mt-6 rounded-xl mx-3 w-full">Send Message</button>
+                    </div>
+                </div>
+                <div class="mt-12 mx-3 rounded-xl border-2 p-9 text-center w-full">
+                    <h3 class="text-2xl font-extrabold">Social Media</h3>
+                    <div class="flex justify-center gap-8 mt-7"> 
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-github"></i>
                     </div>
                 </div>
             </div>
