--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 </div>
                 <div class="mt-12 mx-3 rounded-xl border-2 p-9 text-center w-full">
                     <h3 class="text-2xl font-extrabold">Social Media</h3>
-                    <div class="flex justify-center gap-8 mt-7"> 
+                    <div class="flex justify-center gap-8 mt-7">
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-instagram"></i>
@@ -474,8 +474,56 @@
             </div>
         </section>
     </main>
-    <footer>
 
+    <!-- footer section -->
+    <footer class="flex flex-col lg:flex-row justify-around items-center footer w-full p-5 lg:px-28 lg:py-24 mt-24 bg-black text-white text-base-content">
+        <nav>
+            <h6 class=" text-3xl font-extrabold">Get In Touch</h6>
+            <p class="font-medium ">The page includes links YouTube channel, Email. <br> This gives visitors multiple
+                ways to reach out,
+                <br> depending on their preferred method of communication
+            </p>
+            <div class=" flex gap-2 items-center mt-4">
+                <i class="fa-solid fa-envelope text-red-500"></i>
+                <p>hockeys@support.com</p>
+            </div>
+            <div class=" flex gap-2 items-center mt-2">
+                <i class="fa-solid fa-phone text-red-500"></i>
+                <p>(+62) 123-321-543</p>
+            </div>
+        </nav>
+        <div class="flex flex-row gap-40">
+        
+                <nav>
+                    <h6 class="text-xl font-bold text-white mb-5">Company</h6>
+                    <ul>
+                        <li><a class="link link-hover">About us</a></li>
+                        <li><a class="link link-hover">leadership</a></li>
+                        <li><a class="link link-hover">leadership</a></li>
+                        <li><a class="link link-hover">Careers</a></li>
+                        <li><a class="link link-hover">News & Article</a></li>
+                        <li><a class="link link-hover">Legal Notice</a></li>
+                    </ul>
+                </nav>
+                <nav>
+                    <h6 class="text-xl font-bold text-white mb-5">Support</h6>
+                    <ul>
+                        <li><a class="link link-hover">Help Center</a></li>
+                        <li><a class="link link-hover">FAQ</a></li>
+                        <li><a class="link link-hover">Ticket Support</a></li>
+                        <li><a class="link link-hover">Contact Us</a></li>
+                    </ul>
+                </nav>
+            
+        </div>
+        <nav>
+            <h6 class="text-xl font-bold text-white mb-5">Services</h6>
+            <a class="link link-hover">Academy</a>
+            <a class="link link-hover">Group Lesson</a>
+            <a class="link link-hover">Private lesson</a>
+            <a class="link link-hover">Hockeys for kids</a>
+            <a class="link link-hover">Hockeys for Adults</a>
+        </nav>
     </footer>
 </body>
 
